--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -28,3 +28,7 @@ button {
     cursor: pointer;
   }
 }
+
+a {
+  color: inherit;
+}
