--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -6,11 +6,12 @@
 $clr-primary: var(--clr-primary);
 $clr-secondary: var(--clr-secondary);
 
-$fs-xl: 108px;
+$fs-xl: 148px;
 $fs-xl-mobile: 96px;
-$fs-l: 36px;
+$fs-l: 48px;
 $fs-l-mobile: 32px;
-$fs-m: 18px;
+$fs-m: 24px;
+$fs-m-mobile: 18px;
 $fs-s: 16px;
 
 $txt-opacity: 0.4;
